PullRequest: 95 hotfix/metaserver-refactor
Signed-off-by: 源三 <yuzhi.lyz@antgroup.com>


* [raft-snapshot]snapshot enabled for data-server manager and session-server manager

* refactor:

1. For raft services (DataServerManager, SessionServerManager, CurrentDcMetaServer), use RaftProcessor to decorate them
2. For core functionalities, unit test coverage is above 89%
3. Optimize few scenerios:
   3.1 reduce useless JRaft write while data/session renewing work
   3.2 Snapshot is now more reliable for all raft services, and well tested
   3.3 more log details for slot change